--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.0+4
   provider: ^6.0.5
+  google_maps_flutter: ^2.2.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
